--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,28 @@
-body{
-    background-color: #1c1c1c;
+body {
+  background-color: #1c1c1c;
 }
-.title{
-    font-size: 40px;
-    text-align: center;
-    font-family: 'Kanit', sans-serif;
-    color: white;
+h5 {
+  font-family: "Kanit", sans-serif;
 }
-img{
-    display: block;
-    margin: 0 auto;
+.title {
+  font-size: 40px;
+  text-align: center;
+  font-family: "Kanit", sans-serif;
+  color: white;
 }
-.card{
-    transition: .5s;
+img {
+  display: block;
+  margin: 0 auto;
 }
-.card:hover{
-    transform: translateY(-10px)
+.card {
+  transition: 0.5s;
 }
-.card-text{
-    text-align: left;
+.card:hover {
+  transform: translateY(-10px);
+}
+.card-text {
+  text-align: left;
+}
+.col {
+  padding: 30px;
 }
