--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,24 @@ body {
 h5 {
   font-family: "Kanit", sans-serif;
 }
+h1{
+    text-align: center;
+    font-size: 80px;
+    color: white;
+    padding-top: 10%;
+}
+h2{
+    text-align: center;
+    color: white;
+
+}
+p{
+    color: white;
+    font-size: 30px;
+}
+div{
+    height: 50vh;
+}
 .title {
   font-size: 40px;
   text-align: center;
@@ -25,4 +43,13 @@ img {
 }
 .col {
   padding: 30px;
+}
+.Housing{
+    padding-left: 35%;
+    padding-right: 35%;
+    background-color: bisque;
+}
+.PersonHeader{
+    padding-left: 15%;
+    padding-right: 15%;
 }
