--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,12 @@ h1 {
   font-size: 80px;
   color: white;
 }
+.intro{
+  color: white;
+  font-family: "Kanit", sans-serif;
+  font-size: 24px;
+  padding: 5%;
+}
 .title {
   font-size: 40px;
   text-align: center;
